--- a/content/release-notes/1_11.md
+++ b/content/release-notes/1_11.md
@@ -20,4 +20,15 @@ draft: false
 
 
 # CDK Release Notes - 1.11
-*Notes coming soon*
+ Протестированна совместимость Kubernetes EL 1.11.2
+ Runtime
+  Docker 1.13.1
+  CRI-O 1.11.2
+  ContainerD 1.1.1
+ Network plugins
+  Flannel v0.10.0
+  Calico 3.2
+ Ingress controller
+  Nginx ingress 0.18.0
+  Haproxy ingress 0.5
+  Traefik v1.6.6
