add release notes

--- a/content/release-notes/1_10.md
+++ b/content/release-notes/1_10.md
@@ -20,4 +20,46 @@ draft: true
 
 
 # CDK Release Notes - 1.10
-*Notes coming soon*
+
+- Fix creation of custom resources when the CRD contains non-conventional pluralization and subresources  
+  + Bump up version number of debian-base, debian-hyperkube-base and debian-iptables.  
+  + Also updates dependencies of users of debian-base.  
+- debian-base version 0.3.1 is already available.  
+- Fix an issue that pods using hostNetwork keep increasing.  
+- Allows extension API server to dynamically discover the requestheader CA certificate when the core API server doesn't use certificate based authentication for it's clients  
+- Fix an issue where filesystems are not unmounted when a backend is not reachable and returns EIO.  
+- Add NoSchedule/NoExecute tolerations to ip-masq-agent, ensuring it to be scheduled in all nodes except master.  
+- Metadata Agent Improvements  
+  + Bump metadata agent version to 0.2-0.0.21-1.  
+  + Expand the metadata agent's access to all API groups.  
+  + Remove metadata agent config maps in favor of command line flags.  
+  + Update the metadata agent's liveness probe to a new /healthz handler.  
+  + Logging Agent Improvements  
+  + Bump logging agent version to 0.2-1.5.33-1-k8s-1.  
+  + Appropriately set log severity for k8s_container.  
+  + Fix detect exceptions plugin to analyze message field instead of log field.  
+  + Fix detect exceptions plugin to analyze streams based on local resource id.  
+  + Disable the metadata agent for monitored resource construction in logging.  
+  + Disable timestamp adjustment in logs to optimize performance.  
+  + Reduce logging agent buffer chunk limit to 512k to optimize performance.  
+- Kubelet will set extended resource capacity to zero after it restarts. If the extended resource is exported by a device plugin, its capacity will change to a valid value after the device plugin re-connects with the Kubelet. If the extended resource is exported by an external component through direct node status capacity patching, the component should repatch the field after kubelet becomes ready again. During the time gap, pods previously assigned with such resources may fail kubelet admission but their controller should create new pods in response to such failures.  
+- This fix prevents a GCE PD volume from being mounted if the udev device link is stale and tries to correct the link.  
+- Report node DNS info with --node-ip flag  
+- Fixed an issue which prevented gcloud from working on GCE when metadata concealment was enabled.  
+- fix issue that pull image failed from a cross-subscription Azure Container Registry  
+- Preserve vmUUID when renewing nodeinfo in vSphere cloud provider  
+
+
+ Kubernetes EL 1.10.7 has been tested for compatibility with the following runtimes and plugins:
+
+ **Runtime**  
+- Docker 1.13.1  
+- CRI-O 1.10.6  
+- ContainerD 1.1.1  
+**Network plugins**  
+- Flannel v0.10.0  
+- Calico 3.1  
+**Ingress controllers**  
+- Nginx ingress 0.18.0  
+- Haproxy ingress 0.5  
+- Traefik v1.6.6  
