--- a/content/release-notes/1_11.md
+++ b/content/release-notes/1_11.md
@@ -20,6 +20,45 @@ draft: false
 
 
 # CDK Release Notes - 1.11
+
+- Cluster Autoscaler version updated to 1.3.1. Release notes: https://github.com/kubernetes/autoscaler/releases/tag/cluster-autoscaler-1.3.1  
+  + Default value for expendable pod priority cutoff in GCP deployment of Cluster Autoscaler changed from 0 to -10.  
+  + action required: users deploying workloads with priority lower than 0 may want to use priority lower than -10 to avoid triggering scale-up.  
+- Metadata Agent Improvements  
+  + Bump metadata agent version to 0.2-0.0.21-1.  
+  + Expand the metadata agent's access to all API groups.  
+  + Remove metadata agent config maps in favor of command line flags.  
+  + Update the metadata agent's liveness probe to a new /healthz handler.  
+  + Logging Agent Improvements  
+  + Bump logging agent version to 0.2-1.5.33-1-k8s-1.  
+  + Appropriately set log severity for k8s_container.  
+  + Fix detect exceptions plugin to analyze message field instead of log field.  
+  + Fix detect exceptions plugin to analyze streams based on local resource id.  
+  + Disable the metadata agent for monitored resource construction in logging.  
+  + Disable timestamp adjustment in logs to optimize performance.  
+  + Reduce logging agent buffer chunk limit to 512k to optimize performance.  
+- Fix a bug on GCE that /etc/crictl.yaml is not generated when crictl is preloaded.  
+- Fix validation for HealthzBindAddress in kube-proxy when --healthz-port is set to 0  
+- fix acr could not be listed in sp issue  
+- Fixed an issue which prevented gcloud from working on GCE when metadata concealment was enabled.  
+- Fix for resourcepool-path configuration in the vsphere.conf file.  
+- This fix prevents a GCE PD volume from being mounted if the udev device link is stale and tries to correct the link.  
+- Fix kubelet startup failure when using ExecPlugin in kubeconfig  
+- GCE: Fixes loadbalancer creation and deletion issues appearing in 1.10.5.  
+- kubeadm: Pull sidecar and dnsmasq-nanny images when using kube-dns  
+- fix smb mount issue  
+- Extend TLS timeouts to work around slow arm64 math/big  
+- Allow ScaleIO volumes to be provisioned without having to first manually create /dev/disk/by-id path on each kubernetes node (if not already present)  
+- kubeadm: stop setting UID in the kubelet ConfigMap  
+- fixes a panic when using a mutating webhook admission plugin with a DELETE operation  
+- Update crictl to v1.11.1.  
+- kubectl: fixes a panic displaying pods with nominatedNodeName set  
+- fixes a validation error that could prevent updates to StatefulSet objects containing non-normalized resource requests  
+- Tolerate missing watch permission when deleting a resource  
+- prevents infinite CLI wait on delete when item is recreated  
+- Preserve vmUUID when renewing nodeinfo in vSphere cloud provider  
+
+
  Kubernetes EL 1.11.2 has been tested for compatibility with the following runtimes and plugins:
 
  **Runtime**  
