fix release notes for 1.11.2

--- a/content/release-notes/1_11.md
+++ b/content/release-notes/1_11.md
@@ -21,10 +21,10 @@ draft: false
 
 # CDK Release Notes - 1.11
 
-Изменения в релизе CDK v1.11.2 соответствую изменениям в релизе [Kubernetes v1.11.2](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.11.md#changelog-since-v1111)
+Containerum Distribution of Kubernetes v1.11.2 is up to date with Kubernetes v1.11.2 and includes all the changes and features of the latter. You can find the release notes for Kubernetes v1.11.2 in [the official repository.](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.11.md#changelog-since-v1111)
 
 
- Kubernetes EL 1.11.2 has been tested for compatibility with the following runtimes and plugins:
+ Containerum Distribution of Kubernetes 1.11.2 has been tested for compatibility with the following runtimes and plugins:
 
 
  **Runtime**  
@@ -38,5 +38,5 @@ draft: false
 
 **Ingress controllers**  
 - [Nginx ingress 0.18.0](/plugins/nginx-ingress/)  
-- [Haproxy ingress 0.5](/plugins/haproxy/) 
+- [HAProxy ingress 0.5](/plugins/haproxy/)  
 - [Traefik v1.6.6](/plugins/traefik/)  
