--- a/content/release-notes/1_10.md
+++ b/content/release-notes/1_10.md
@@ -1,7 +1,7 @@
 ---
-title: CDK 1.10 - Release Notes
+title: KDC 1.10 - Release Notes
 linktitle: "1.10.x"
-description: Release notes for Containerum Distribution of Kubernetes 1.10
+description: Release notes for Kubernetes Distribution by Containerum 1.10
 
 date: 2017-03-23
 
@@ -19,5 +19,5 @@ draft: true
 ---
 
 
-# CDK Release Notes - 1.10
+# KDC Release Notes - 1.10
 *Notes coming soon*
