--- a/content/release-notes/1_11.md
+++ b/content/release-notes/1_11.md
@@ -1,7 +1,7 @@
 ---
-title: CDK 1.11 - Release Notes
+title: KDC 1.11 - Release Notes
 linktitle: "1.11.x"
-description: Release notes for Containerum Distribution of Kubernetes 1.11
+description: Release notes for Kubernetes Distribution by Containerum 1.11
 
 date: 2017-03-23
 
@@ -19,7 +19,7 @@ draft: false
 ---
 
 
-# CDK Release Notes - 1.11
+# KDC Release Notes - 1.11
  Kubernetes EL 1.11.2 has been tested for compatibility with the following runtimes and plugins:
 
  **Runtime**  
